Deleted unneeded css inside the scroll. Added z-index to stop header from going behind content in the index.

--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,7 @@ header {
   align-items: center;
   position: sticky;
   top: 0;
+  z-index: 100;
 }
 
 .homelinks {
@@ -104,13 +105,11 @@ a:hover {
 #openingCrawl {
   display: flex;
   width: 50%;
-  word-break: keep-all;
   height: 800px;
   perspective: 400px;
   font-family: "Pathway Gothic One", sans-serif;
   font-size: 500%;
   font-weight: 600;
-  letter-spacing: 6px;
   line-height: 150%;
   text-align: justify;
   position: relative;
